--- a/_sub-client/vci/jekyll-vci/_layouts/default.html
+++ b/_sub-client/vci/jekyll-vci/_layouts/default.html
@@ -17,6 +17,8 @@
       </div>
     </div>
     
+    {% include footer-wommy.html %}
+
     {% comment %}
     {% include footer.html %}
     {% endcomment %}
