--- a/_sub-client/vci/jekyll-vci/_sass/_base.scss
+++ b/_sub-client/vci/jekyll-vci/_sass/_base.scss
@@ -89,11 +89,11 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    color: $brand-color-orange;
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: darken($brand-color-orange, 15%);
     }
 
     &:hover {
