--- a/_sub-client/vci/jekyll-vci/_includes/footer-wommy.html
+++ b/_sub-client/vci/jekyll-vci/_includes/footer-wommy.html
@@ -1,12 +1,15 @@
-<footer class="site-footer-wommy">
+<footer class="footer-wommy">
 
-      Copyright © 2015
+      <span>Copyright © 2015</span>
+
+      <a href="http://og-printing.com">of Original Graphic Printing</a>
+
+      <a href="http://wommytilliams.com">Site by Tommy Williams</a>
+
+      
 
       <!-- <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
       </div> -->
-    </div>
-
-  </div>
 
 </footer>
