--- a/_sub-client/vci/jekyll-vci/_includes/footer-wommy.html
+++ b/_sub-client/vci/jekyll-vci/_includes/footer-wommy.html
@@ -1,15 +1,15 @@
 <footer class="footer-wommy">
 
-      <span>Copyright © 2015</span>
-
-      <a href="http://og-printing.com">of Original Graphic Printing</a>
-
-      <a href="http://wommytilliams.com">Site by Tommy Williams</a>
-
-      
-
-      <!-- <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
-      </div> -->
-
+	<span>
+		created by
+		<a href="http://wommytilliams.com">Wommy</a>
+		@
+		<a href="http://og-printing.com">Original Graphic Printing</a>
+	</span>
+	<span><!-- Copyright --> © {{ site.time | date: '%Y' }}</span>
+<!-- 
+<div class="footer-col  footer-col-3">
+  <p class="text">{{ site.description }}</p>
+</div>
+ -->
 </footer>
