tidied up contact details + form
TODO: mobile

--- a/_sub-client/vci/jekyll-vci/_includes/form.html
+++ b/_sub-client/vci/jekyll-vci/_includes/form.html
@@ -23,22 +23,22 @@
 	<div class='row'>
 		<span>Problem:</span>
 
-		<!-- <div class='column'> -->
-			<label checked='checked'>
-				<input type="checkbox" name="4a-tshirt" value="yes">
-				<span>tshirt</span>
+		<div class='column'>
+			<label>
+				<input type="checkbox" name="4a-concrete_flatwork" value="yes">
+				<span>concrete flatwork</span>
 			</label>
 
 			<label>
-				<input type="checkbox" name="4b-banner" value="yes" checked>
-				<span>banner</span>
+				<input type="checkbox" name="4b-sidewalks_driveway" value="yes">
+				<span>sidewalks/driveway</span>
 			</label>
 			
 			<label>
-				<input type="checkbox" name="4c-decal" value="yes">
-				<span>decal</span>
+				<input type="checkbox" name="4c-public_way" value="yes">
+				<span>public way</span>
 			</label>
-		<!-- </div> -->
+		</div>
 
 	</div>
 
