--- a/_sub-client/vci/jekyll-vci/_includes/ogp-vci-form1.html
+++ b/_sub-client/vci/jekyll-vci/_includes/ogp-vci-form1.html
@@ -23,16 +23,16 @@
 		<span>
 			<header>Problem:</header>
 			<label>
-				<input type="checkbox" name="4a-tshirt" value="yes">
-				<span>tshirt</span>
+				<input type="checkbox" name="4a-concrete_flatwork" value="yes">
+				<span>concrete flatwork</span>
 			</label>
 			<label>
-				<input type="checkbox" name="4b-banner" value="yes">
-				<span>banner</span>
+				<input type="checkbox" name="4b-sidewalks_driveway" value="yes">
+				<span>sidewalks/driveway</span>
 			</label>
 			<label>
-				<input type="checkbox" name="4c-decal" value="yes">
-				<span>decal</span>
+				<input type="checkbox" name="4c-public_way" value="yes">
+				<span>public way</span>
 			</label>
 		</span>
 				
