--- a/_sub-client/vci/jekyll-vci/_includes/header-wommy.html
+++ b/_sub-client/vci/jekyll-vci/_includes/header-wommy.html
@@ -8,9 +8,9 @@
 
     <nav class='header-nav'>
       <a class="mobile" href="#"><span>Contact</span></a>
-      <a class="fa fa-phone" href="tel:{{ site.phone }}"><span> - {{ site.phone }}</span></a>
-      <a class="fa fa-envelope" href="mailto:{{ site.email }}"> - {{ site.email }}</a>
-      <a class="fa fa-map" href="{{ site.address_url }}"> - {{ site.address }}</a>
+      <a class="fa fa-phone" href="tel:{{ site.phone }}"><span>{{ site.phone }}</span></a>
+      <a class="fa fa-envelope" href="mailto:{{ site.email }}"><span>{{ site.email }}</span></a>
+      <a class="fa fa-map" href="{{ site.address_url }}"><span>{{ site.address }}</span></a>
     </nav>
 
   </div>
