--- a/_sub-client/vci/jekyll-vci/_includes/footer-wommy.html
+++ b/_sub-client/vci/jekyll-vci/_includes/footer-wommy.html
@@ -1,12 +1,15 @@
 <footer class="footer-wommy">
 
-	<span>
+
+	<span>©{{ site.time | date: '%Y' }}<a href="http://og-printing.com">OGP</a>&<a href="http://wommytilliams.com">Wommy</a></span>
+
+	<!-- <span>
 		created by
 		<a href="http://wommytilliams.com">Wommy</a>
 		@
 		<a href="http://og-printing.com">Original Graphic Printing</a>
 	</span>
-	<span><!-- Copyright --> © {{ site.time | date: '%Y' }}</span>
+	<span>Copyright © {{ site.time | date: '%Y' }}</span> -->
 <!-- 
 <div class="footer-col  footer-col-3">
   <p class="text">{{ site.description }}</p>
