--- a/_sub-client/vci/jekyll-vci/_includes/header-wommy.html
+++ b/_sub-client/vci/jekyll-vci/_includes/header-wommy.html
@@ -7,7 +7,9 @@
     </a>
 
     <nav class='header-nav'>
-      <a class="mobile" href="#"><span>Contact</span></a>
+      <a class="mobile" href="{{ site.url }}/contact"><span>Contact</span></a>
+      <a class="mobile" href="{{ site.url }}/form"><span>Request a Quote</span></a>
+      <a class="mobile" href="{{ site.url }}/pictures"><span>Pictures</span></a>
       <a class="fa fa-phone" href="tel:{{ site.phone }}"><span>{{ site.phone }}</span></a>
       <a class="fa fa-envelope" href="mailto:{{ site.email }}"><span>{{ site.email }}</span></a>
       <a class="fa fa-map" href="{{ site.address_url }}"><span>{{ site.address }}</span></a>
